--- a/style.css
+++ b/style.css
@@ -2,3 +2,21 @@
     margin: 0;
     padding: 0;
 }
+
+
+
+.main{
+    display: flex;
+    width: 50%;
+    background-color: aquamarine;
+    margin: 50px;
+  
+}
+
+.header{
+    text-align: center;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-right: 40px;
+
+}
