--- a/style.css
+++ b/style.css
@@ -14,9 +14,19 @@
 }
 
 .header{
-    text-align: center;
-    padding-left: 20px;
-    padding-top: 20px;
-    margin-right: 40px;
+    
+}
+
+.form{
+   max-width: 450px;
+   background: #FAFAFA;
+   padding: 30px;
+   margin: 50px auto;
+   box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.35);
+   border-radius: 30Px;
+   border: 0.5px solid #305A72;
 
 }
+
+
+
