--- a/style.css
+++ b/style.css
@@ -1,30 +1,37 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-
-
 .main{
-    display: flex;
-    width: 50%;
-    background-color: aquamarine;
-    margin: 50px;
+    background-color: cyan;
+
+    width:50%;
+    margin-left: 300px;
+    margin-top: 20px;
+    padding: 20px;
   
 }
 
 .header{
+
+    padding: 30px;
+    margin: 50px auto;
+    text-align: center;
     
 }
 
 .form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
    max-width: 450px;
    background: #FAFAFA;
-   padding: 30px;
+   padding: 50px;
    margin: 50px auto;
    box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.35);
    border-radius: 30Px;
    border: 0.5px solid #305A72;
+
+}
+
+#name{
 
 }
 
