--- a/style.css
+++ b/style.css
@@ -1,19 +1,25 @@
+
+
 .main{
     background-color: cyan;
-
-    width:50%;
-    margin-left: 300px;
-    margin-top: 20px;
-    padding: 20px;
-  
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
 }
 
 .header{
-
-    padding: 30px;
-    margin: 50px auto;
+    box-sizing: content-box;
     text-align: center;
-    
+    background-color: darkblue;   
+    align-self: baseline;
+    margin-left: 100px;
+    margin-right: 0;
+    padding: 50px;
+    font-family: 'lora', serif;
+   
+
 }
 
 .form{
@@ -25,15 +31,11 @@
    background: #FAFAFA;
    padding: 50px;
    margin: 50px auto;
-   box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.35);
-   border-radius: 30Px;
-   border: 0.5px solid #305A72;
+  
 
 }
 
-#name{
 
-}
 
 
 
