--- a/style.css
+++ b/style.css
@@ -3,35 +3,37 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    width: 100%;
+    height: 100vh;
+}
 
 .main{
-    background-color: cyan;
-    height: 100vh;
+    position: relative;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
-    align-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 20px, 100px;
 }
-
+.main::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background:url(img/Green\ and\ White\ Shoes\ Beauty\ &\ Fashion\,\ Youtube\ Video\ Intro.png) no-repeat center;
+    background-size: cover;
+    z-index: -1;
+    filter: blur(50px);
+}
 .header{
-    box-sizing: content-box;
-    text-align: center;
-    background-color: darkblue;   
-    align-self: baseline;
-    margin-left: 100px;
-    margin-right: 0;
-    padding: 50px;
-    font-family: 'lora', serif;
-   
-
+ 
 }
 
-.form{
-     background: #FAFAFA;
-  
-  
 
-}
 
 
 
