--- a/style.css
+++ b/style.css
@@ -39,10 +39,13 @@ body{
  
 }
 .header{
+    display: flex;
+    flex-wrap: wrap;
 
 }
 .form{
     padding: 25px, 40px;
+    box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 
 }
 .form-field{
@@ -75,8 +78,21 @@ body{
     cursor: pointer;
     outline: none;
     border: none;
+    transition: .3s;
+}
+.btn:hover{
+    background-color:#fff;
 }
 
+@media screen and (max-width:880px){
+    .contact-box{
+        grid-template-columns: 1fr;
+
+    }
+    .header{
+        height: 200px;
+    }
+}
 
 
 
