--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     background:url(img/Green\ and\ White\ Shoes\ Beauty\ &\ Fashion\,\ Youtube\ Video\ Intro.png) no-repeat center;
     background-size: cover;
     z-index: -1;
-    filter: blur(50px);
+    filter: blur(30px);
 }
 .contact-box{
     max-width: 850px;
@@ -44,8 +44,8 @@ body{
 
 }
 .form{
-    padding: 25px, 40px;
-    box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+    padding: 40px;
+    box-shadow: 0px 0px 19px 10px rgba(0, 0, 0, 0.19);
 
 }
 .form-field{
@@ -57,6 +57,8 @@ body{
     border: 2px, solid rgba(0, 0, 0, 0);
     margin-bottom: 22px;
     transition: .3s;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
 
 }
 .form-field:hover{
@@ -66,12 +68,11 @@ body{
     background-color: #fff;
     border: 2px, solid rgba(30, 85, 250, 0.47);
 }
-#comment{
-    min-height: 150px;
-}
+
 
 .btn{
     width: 100%;
+    height: 30px;
     padding: 0,5rem, 1rem ;
     font-size: 1,1rem;
     background-color: wheat;
